src/tests/Metalama.Patterns.Caching.AspectTests/InvalidateCacheAttributeTests/Diagnostics/SameTypeAndNonExistingMethod.t.cs
// Error LAMA5106 on `Invalidate`: `Invalid [InvalidateCache] aspect on 'SameTypeAndNonExistingMethod.CachingClass.Invalidate()': there is no method named 'NonExistingMethod' in type 'SameTypeAndNonExistingMethod.CachingClass'.`